workshops/nkp-workshop/resources/observability/kiali.yaml
---
# ExternalName service in kommander-default-workspace so Traefik ingress can route to Kiali
apiVersion: v1
kind: Service
metadata:
  name: kiali-proxy
  namespace: kommander-default-workspace
spec:
  type: ExternalName
  externalName: kiali.istio-system.svc.cluster.local
  ports:
    - name: http
      port: 20001
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kiali
  namespace: kommander-default-workspace
spec:
  rules:
    - http:
        paths:
          - path: /dkp/kiali
            pathType: Prefix
            backend:
              service:
                name: kiali-proxy
                port:
                  number: 20001
